can now place some 'towns'

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,4 +15,5 @@
         },
         "editor.defaultFormatter": "charliermarsh.ruff"
       },
+      "cursorpyright.analysis.typeCheckingMode": "strict"
 }
